--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 
 <head>
-		<title>Bootstrap Tutorial</title>
+		<title>Node.JS Tutorial</title>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
@@ -17,30 +17,19 @@
 
 </head>
 
-<body> <div class="container"> <h1>Introduction</h1>
+<body> 
+    <div class="container"> 
+        <h1>Introduction</h1>
 
-        <p>Bootstrap is an
-        extremely powerful web framework that lets developers build very
-        professional looking web pages extremely quickly. In this tutorial we
-        are going to teach you the fundimentals of this extremely powerful tool.
-        Before we dive into bootstrap it is important to understand what
-        Boostrap is. </p> <br>
+        <p>Node.JS is a powerful cross-platform runtime environment that is designed for developing server-side web applications. In this tutorial we are going to provide a basic introduction into how Node.JS works and how you can start developing your own applications today.</p> <br>
 
-        <h3>What is Bootstrap?</h3>
+        <h3>What is Node.JS?</h3>
 
-        <p>Bootstrap is a client-side framework. It is primarily a CSS library, although
-        it has been extended to work with JavaScript. Bootstrap
-        defines a set of consistent CSS templates for building large, professional
-        looking web applications. From the beginning, bootstrap was supposed
-        to be quick to develop and easy for both the developer and the end
-        user. One of the biggest wins with bootstrap is its ability to take advantage
-        of the CSS media flags to create consistent looking applications for both
-        desktop and mobile clients.
-
-        </p><p>
-        Bootstrap allows the user to create a single source and Bootstrap will
-        auto-magically dynamically resize to fit a whole array of different
-        browser sizes.
+        <p>Node.JS, like we mentioned above, is a cross-platform runtime environment. It is designed for developing server-side web applications. Node.JS applications are written in javascript and can be run on any platform. The javascript is executed by the V8, a javascript engine developed by Google. This is the same engine that Chrome uses inside of its browser.
+        </p>
+    
+        <h3>Why use Node.JS</h3>
+        <p>Node has a very powerful attribute that sets it apart from other web frameworks that gives it a huge advantage. Instead of just creating the front end html and relying on stateless scripts on the server, you acctually create your own web server that allows you to rely on a persistant state. So what does this mean? Well most web developers are probably used to using apache. You configure apache to listen on port 80 and then when your clients go to your web page. Apache finds the file they want and then serves them the file. 
         </p>
 
         One of the big wins with bootstrap is the ease of being able to create
