--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -25,34 +25,16 @@
 
         <h3>What is Node.JS?</h3>
 
-        <p>Node.JS, like we mentioned above, is a cross-platform runtime environment. It is designed for developing server-side web applications. Node.JS applications are written in javascript and can be run on any platform. The javascript is executed by the V8, a javascript engine developed by Google. This is the same engine that Chrome uses inside of its browser.
+        <p>Node.JS, like we mentioned above, is a cross-platform runtime environment. It is designed for developing server-side web applications. Node.JS applications are written in Javascript and can be run on any platform. The Javascript is executed by the V8, a Javascript engine developed by Google. This is the same engine that Chrome uses inside of its browser.
         </p>
     
         <h3>Why use Node.JS</h3>
-        <p>Node has a very powerful attribute that sets it apart from other web frameworks that gives it a huge advantage. Instead of just creating the front end html and relying on stateless scripts on the server, you acctually create your own web server that allows you to rely on a persistant state. So what does this mean? Well most web developers are probably used to using apache. You configure apache to listen on port 80 and then when your clients go to your web page. Apache finds the file they want and then serves them the file. 
+        <p>Node has a very powerful attribute that sets it apart from other web frameworks that gives it a huge advantage. Instead of just creating the front end html and relying on stateless scripts on the server, you actually create your own web server that allows you to rely on a persistent state. So what does this mean? Well most web developers are probably used to using apache. You configure apache to listen on port 80 and then when your clients go to your web page. Apache finds the file they want and then serves them the file. Each connection is a separate connection that doesn't affect the other users. If you need to save state or change any information you need to interact with a database. NodeJS acts as an apache replacement. Except because you are writing the single application you can keep track of state within the application and then let each connection change a shared state. This is an extremely powerful tool and is what sets node.js apart from other web frameworks.
         </p>
-
-        One of the big wins with bootstrap is the ease of being able to create
-        a web application with the ability to dynamically resize to fit on mobile
-        platforms as well as desktop platforms.
-        </p>
-
-        <h3>Where does it come from?</h3>
-
-        <p>Bootstrap was developed at Twitter by Mark Otto and Jacob
-        Thornton. They released it as an open source project August 2011.
-        Once it became open sourced it became so popular that it was the #1
-        project on Github in 2014.</p>
 
         <h3>What should I know before looking at this page?</h3>
 
-        <p>Bootstrap is a client-side abstraction layer built on HTML-5, CSS3,
-        and JavaScript. Before diving into Bootstrap it would be advantageous
-        to be familiar with at least the basics of the common web technologies.
-
-        <p>In addition to these, JQuery is used in some of the following demos.
-        JQuery is a "batteries included" library for JavaScript and is extremely
-        powerful. Some familiarization with JQuery might be helpful.<p>
+        <p>Node.JS is a server-side application. You should have familiar knowledge with how server-side applications work as well as basic network knowledge. Node.JS is also an event bases system. It helps to conceptually to know how these work and how they are implemented. At a minimum you should be comfortable knowing how to work with event systems.<p>
 
     </div>
 
