--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
              <li id="navbar-Introduction"><a id="intro-button" href="#" onclick="showPage('introduction');return false;" >Introduction</a></li>
              <li id="navbar-GettingStarted"><a href="#" onclick="showPage('gettingstarted');return false;">Getting Started</a></li>
              <li id="navbar-Basics"><a href="#" onclick="showPage('basics');return false;">Basics</a></li>
+             <li id="navbar-Modules"><a href="#" onclick="showPage('modules');return false;">Modules</a></li>
              <li id="navbar-Portfolio"><a href="#" onclick="showPage('Express'); return false;">Express</a></li>
              <li id="navbar-Advanced"><a href="#" onclick="showPage('advanced');return false;">Advanced</a></li>
              <li id="navbar-Mobile"><a href="#" onclick="showPage('mobile');return false;">Scaffolding</a></li>
