--- a/pages/express.html
+++ b/pages/express.html
@@ -76,7 +76,7 @@ app.listen(8080);
     <p> 
         Like before, we load express and create a new app using it. From here, we can define various endpoints for this app. Here, we have created a "get" for both the index page, and one for "/user". Furtheremore, we have a "put" method for the user endpoint. All 3 of these are handlers for their respective endpoint, and return various responses. In our case, these are simple text that indicate the routing succeeded. 
     </p>
-    <img src="img/ExpressRouting1.png" ></img>
+    <img src="img/ExpressRouting1.PNG" ></img>
     <p> The above screenshot shows how a get request can be triggered from the browser by accesing the port 8080 with the URL /user.</p> 
 
     <h3>Advanced Routing</h3>
@@ -99,7 +99,7 @@ app.get('/user', function (req, res) {
 });
     </pre></code> 
     <p> The above snippet of code allows for 'get' requests at 'users' URL. Using ejs, we render the "users.html" page from the views directory. </p>
-    <img src="img/ExpressRouting2.png" ></img>
+    <img src="img/ExpressRouting2.PNG" ></img>
 
     <!-- Examples --> 
     <h3>Code</h3>
