Some stuff with modules

--- a/pages/modules.html
+++ b/pages/modules.html
@@ -20,7 +20,21 @@
 <body>
     <div class="container">
         <h1>Modules</h1>
-        <p>We have given you a brief introduction into a few modules over the past couple slides however now we are going to talk about exactly what they are and how they are used. </p>
+
+        <p>We have given you a brief introduction into a few modules over the
+        past couple slides however now we are going to talk about exactly what
+        they are and how they are used. </p>
+
+        <p>Modules in Node.js work a little differently than they do in other programming
+        languages. This is an artifact of the way modularity in JavaScript works. In client-side JavaScript,
+        there is no notion of modules built into the language. Rather, one must work together a
+        sort of hack to get them by dynamically modifying the HTML to include the required JavaScript
+        files</p>
+
+        <p>
+        To maintain cross-compatibility with server-side and client-side JavaScript, Node created a
+        system to abstract away this hack into an elegant function called "require".
+        </p>
 
     </div>
 </body>
