--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -40,7 +40,7 @@
         <p>Node.JS is a single threaded event based system, more on this later, but this means that Node.JS is a good tool if your application is a IO Bound application, Data Intensive Realtime Application, or API based application. Essentially, If your application spends most of its time processing events then Node.JS is a perfect Tool for you.
             
         <h3>When Should I use a different tool?</h3>
-        <p>If your application is CPU bound, or spends a lot of time processing data then Node.JS isn't for you. There are plenty of other applications that you should use for a situation like this. Fortunaly, there are plenty of applications that are not like this and Node.JS can be used to solve those problems.</p>
+        <p>If your application is CPU bound, or spends a lot of time processing data then Node.JS isn't for you. There are plenty of other applications that you should use for a situation like this. Fortunately, there are plenty of applications that are not like this and Node.JS can be used to solve those problems.</p>
         
 
     </div>
