some stuff on npm

--- a/pages/modules.html
+++ b/pages/modules.html
@@ -36,6 +36,14 @@
         system to abstract away this hack into an elegant function called "require".
         </p>
 
+        <h1>Node Package Manager (NPM)</h1>
+
+        <p>
+        The node package manager (npm) is the program used to collect and install modules.
+        in linux it installs modules in a folder called 'node_modules' in the current
+        directory.
+        </p>
+
     </div>
 </body>
 </html>
