Getting Started done and removed advanced

--- a/pages/gettingstarted.html
+++ b/pages/gettingstarted.html
@@ -90,7 +90,7 @@ console.log('Hello World');
         <p>Well what is happening is that the node environment executes all of our statements and then does jump to the event loop. We didn't register for any events though so the event loop immediately exits allowing our program to complete. If at any time there are no handlers registered the event queue will immediately exit.</p>
         
         <h3>Next Chapter</h3>
-        <p>In the chapter we will talk about how to use Node to register handlers and create a full fledged event based, server-side, system.</p>
+        <p>In the chapter we will talk about how to use Node to register handlers and create a full-fledged event based, server-side, system.</p>
     </div>
 </body>
 
