some more with modules

--- a/pages/modules.html
+++ b/pages/modules.html
@@ -44,6 +44,21 @@
         directory.
         </p>
 
+
+        <h1>Creating Your Own Modules</h1>
+
+        <p>Modules in Node.js look different from modules in other languages. We saw how to use modules
+        in some previous examples, but we did not see how to create a module. </p>
+
+        <p>To create your own modules in NodeJS, you use a special object called the export object.
+        This object allows for the programmer to export different attributes and functions from
+        the module.</p>
+
+
+        <p>Let us create a couple of Node.js modules and see how they interact with eachother.</p>
+
+        <p>We can start with a very simple math module</p>
+
     </div>
 </body>
 </html>
