async section complete

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
              <li id="navbar-Modules"><a href="#" onclick="showPage('modules');return false;">Modules</a></li>
              <li id="navbar-Portfolio"><a href="#" onclick="showPage('express'); return false;">Express</a></li>
              <li id="navbar-filesystem"><a href="#" onclick="showPage('filesystem'); return false;">File System</a></li>
+             <li id="navbar-filesystem"><a href="#" onclick="showPage('async'); return false;">ASync</a></li>
            </ul>
          </div><!-- /.navbar-collapse -->
        </div><!-- /.container-fluid -->
