styling for modules

--- a/pages/modules.html
+++ b/pages/modules.html
@@ -236,6 +236,10 @@ module.exports = {
         root access, while installing packages locally does not.
         </p>
 
+        <h2>Next Chapters</h2>
+        In the following chapters, we will cover some of the more important modules in
+        NodeJS. All of the modules can be installed through the Node Package Manager.
+
     </div>
 </body>
 </html>
