--- a/pages/modules.html
+++ b/pages/modules.html
@@ -143,7 +143,7 @@ exports.circleArea = function(radius) {
         </div>
 
         <div class="example">
-        <div class="name"><h1>math.js</h1></div>
+        <div class="name"><h1>main.js</h1></div>
         <div class="pre">
         <pre>
 var math = require('./math.js')
